--- a/package/hong/luci-app-clash/root/usr/share/clash/dashboard/index.html
+++ b/package/hong/luci-app-clash/root/usr/share/clash/dashboard/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>CLASH -DASHBOARD</title>
-    <link href="main.d32d2df9dcc55f57282d.css" rel="stylesheet"></head>
+        <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/Dreamacro/clash/docs/logo.png" />
+        <title>Clash Dashboard</title>
+    <link href="main.170828c7fe0d9a5948a7.css" rel="stylesheet"></head>
     <body>
         <div id="root"></div>
-    <script type="text/javascript" src="js/1.bundle.d32d2df9dcc55f57282d.min.js"></script><script type="text/javascript" src="js/bundle.d32d2df9dcc55f57282d.min.js"></script></body>
+    <script type="text/javascript" src="js/1.bundle.170828c7fe0d9a5948a7.min.js"></script><script type="text/javascript" src="js/bundle.170828c7fe0d9a5948a7.min.js"></script></body>
 </html>
