--- a/package/hong/luci-app-clash/root/usr/share/clash/yac/index.html
+++ b/package/hong/luci-app-clash/root/usr/share/clash/yac/index.html
@@ -22,20 +22,20 @@
   <meta property="og:description" content="Yet Another Clash Dashboard">
 
   
-  <link href="app.9bcabd80415e71c533ca.css" rel="stylesheet">
+  <link href="app.162bce22090b81bd48cc.css" rel="stylesheet">
   
 
 <body>
   <div id="app"></div>
 
   
-  <script src="runtime~app.6826dba02ce13b59437d.js" type="text/javascript"></script>
+  <script src="runtime.5dec3cfa22062be75ea8.js" type="text/javascript"></script>
   
-  <script src="core-js~app.cf3064175266e000a7b4.js" type="text/javascript"></script>
+  <script src="core-js~app.d0ad192734a12bf5aec9.js" type="text/javascript"></script>
   
-  <script src="react~app.2eed4924550c79cbacab.js" type="text/javascript"></script>
+  <script src="react~app.6b67113954659e454015.js" type="text/javascript"></script>
   
-  <script src="app.a2611f68e8ccca771602.js" type="text/javascript"></script>
+  <script src="app.3dcd33240af85fc45c3c.js" type="text/javascript"></script>
   
 
 </body>
